// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`output file Defaults docusaurus id and sidebar when values were not passed 1`] = `
Array [
  "---
",
  "id: defaultId
",
  "title: Components
",
  "sidebar_label: defaultSidebarLabel
",
  "---
",
  "
",
  "Components
",
  "----------
",
  "
",
  "**C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\basic\\\\ExampleComponent.js**
",
  "
",
  "### 1. General component description.
",
  "
",
  "fdgdfgdf gfdgfdg fdgfdgdfg
   ",
  "gdfgfdgdfg dfgdfgfdg dfg df getDefaultPropsg fdgfd
   ",
  "gfdgfdgdfgfdg.
   ",
  "   ",
  "   ",
  "Example:
   ",
  "\`\`\`html
   ",
  "<Component name=\\"bebe\\" />
   ",
  "\`\`\`   ",
  "",
  "
",
  "
",
  "
",
  "Property | Type | Required | Default value | Description
",
  ":--- | :--- | :--- | :--- | :---
",
  "toe|string|no|&#x27;&#x27;|Description of prop &quot;toe&quot; has one break line here following more comments and has default empty string.
",
  "finger|string|no|&#x27;medium&#x27;|Description of prop &quot;finger&quot;.
",
  "foo|number|no|42|Description of prop &quot;foo&quot;.
",
  "bar|custom|no|21|Description of prop &quot;bar&quot; (a custom validation function).
",
  "baz|union|no||
",
  "-----
",
  "**C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\basic\\\\inside\\\\OtherExampleComponent.js**
",
  "
",
  "### 1. Component1
",
  "
",
  "null   ",
  "",
  "
",
  "
",
  "
",
  "Property | Type | Required | Default value | Description
",
  ":--- | :--- | :--- | :--- | :---
",
  "foo|number|no|10000099999|Description of prop &quot;foo&quot;.
",
  "bar|custom|no||Description of prop &quot;bar&quot; (a custom validation function).
",
  "baz|union|no||
",
  "onExit|func|no|See code|
",
  "### 2. DUPA
",
  "
",
  "Blah blah blah...
   ",
  "fdfdfsdf
   ",
  "fdsfsd   ",
  "",
  "
",
  "
",
  "
",
  "Property | Type | Required | Default value | Description
",
  ":--- | :--- | :--- | :--- | :---
",
  "foo|number|no||Description of prop &quot;foo&quot;.
",
  "bar|custom|no||Description of prop &quot;bar&quot; (a custom validation function).
",
  "baz|union|no||
",
  "-----
",
  "
",
  "
",
  "",
]
`;

exports[`output file Populates docusaurus id and sidebar when values were passed 1`] = `
Array [
  "---
",
  "id: someduck
",
  "title: Components
",
  "sidebar_label: someducksidebar
",
  "---
",
  "
",
  "Components
",
  "----------
",
  "
",
  "**C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\basic\\\\ExampleComponent.js**
",
  "
",
  "### 1. General component description.
",
  "
",
  "fdgdfgdf gfdgfdg fdgfdgdfg
   ",
  "gdfgfdgdfg dfgdfgfdg dfg df getDefaultPropsg fdgfd
   ",
  "gfdgfdgdfgfdg.
   ",
  "   ",
  "   ",
  "Example:
   ",
  "\`\`\`html
   ",
  "<Component name=\\"bebe\\" />
   ",
  "\`\`\`   ",
  "",
  "
",
  "
",
  "
",
  "Property | Type | Required | Default value | Description
",
  ":--- | :--- | :--- | :--- | :---
",
  "toe|string|no|&#x27;&#x27;|Description of prop &quot;toe&quot; has one break line here following more comments and has default empty string.
",
  "finger|string|no|&#x27;medium&#x27;|Description of prop &quot;finger&quot;.
",
  "foo|number|no|42|Description of prop &quot;foo&quot;.
",
  "bar|custom|no|21|Description of prop &quot;bar&quot; (a custom validation function).
",
  "baz|union|no||
",
  "-----
",
  "**C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\basic\\\\inside\\\\OtherExampleComponent.js**
",
  "
",
  "### 1. Component1
",
  "
",
  "null   ",
  "",
  "
",
  "
",
  "
",
  "Property | Type | Required | Default value | Description
",
  ":--- | :--- | :--- | :--- | :---
",
  "foo|number|no|10000099999|Description of prop &quot;foo&quot;.
",
  "bar|custom|no||Description of prop &quot;bar&quot; (a custom validation function).
",
  "baz|union|no||
",
  "onExit|func|no|See code|
",
  "### 2. DUPA
",
  "
",
  "Blah blah blah...
   ",
  "fdfdfsdf
   ",
  "fdsfsd   ",
  "",
  "
",
  "
",
  "
",
  "Property | Type | Required | Default value | Description
",
  ":--- | :--- | :--- | :--- | :---
",
  "foo|number|no||Description of prop &quot;foo&quot;.
",
  "bar|custom|no||Description of prop &quot;bar&quot; (a custom validation function).
",
  "baz|union|no||
",
  "-----
",
  "
",
  "
",
  "",
]
`;

exports[`output file Works well for flow components as well 1`] = `
Array [
  "---
",
  "id: someduck
",
  "title: Components
",
  "sidebar_label: someducksidebar
",
  "---
",
  "
",
  "Components
",
  "----------
",
  "
",
  "**C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\flow\\\\ComponentWithFlow.js**
",
  "
",
  "### 1. Component1
",
  "
",
  "null   ",
  "",
  "
",
  "
",
  "
",
  "Property | Type | Required | Default value | Description
",
  ":--- | :--- | :--- | :--- | :---
",
  "foo|number|no|10000099999|
",
  "bar|() &#x3D;&gt; void|yes||Description of prop &quot;bar&quot; (a custom validation function).
",
  "baz|number|string|yes||Description of a property with a flow or operation
",
  "someProp|{   [key:string]: string }|yes||Description for a property which is more than one line
",
  "onExit|() &#x3D;&gt; void|no|() &#x3D;&gt; {     console.debug(&#x27;onExit&#x27;); }|Handler to invoke a function
",
  "customObjectProp|{   firstName:string,   lastName:string }|yes||
",
  "### 2. DUPA
",
  "
",
  "Blah blah blah...
   ",
  "fdfdfsdf
   ",
  "fdsfsd   ",
  "",
  "
",
  "
",
  "
",
  "Property | Type | Required | Default value | Description
",
  ":--- | :--- | :--- | :--- | :---
",
  "foo|number|yes||Description of prop &quot;foo&quot;.
",
  "bar|() &#x3D;&gt; mixed|yes||Description of prop &quot;bar&quot; (a custom validation function).
",
  "baz|number | string|yes||
",
  "-----
",
  "
",
  "
",
  "",
]
`;

exports[`output file has needed values 1`] = `
Array [
  "---
",
  "id: defaultId
",
  "title: Components
",
  "sidebar_label: defaultSidebarLabel
",
  "---
",
  "
",
  "Components
",
  "----------
",
  "
",
  "**C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\basic\\\\ExampleComponent.js**
",
  "
",
  "### 1. General component description.
",
  "
",
  "fdgdfgdf gfdgfdg fdgfdgdfg
   ",
  "gdfgfdgdfg dfgdfgfdg dfg df getDefaultPropsg fdgfd
   ",
  "gfdgfdgdfgfdg.
   ",
  "   ",
  "   ",
  "Example:
   ",
  "\`\`\`html
   ",
  "<Component name=\\"bebe\\" />
   ",
  "\`\`\`   ",
  "",
  "
",
  "
",
  "
",
  "Property | Type | Required | Default value | Description
",
  ":--- | :--- | :--- | :--- | :---
",
  "toe|string|no|&#x27;&#x27;|Description of prop &quot;toe&quot; has one break line here following more comments and has default empty string.
",
  "finger|string|no|&#x27;medium&#x27;|Description of prop &quot;finger&quot;.
",
  "foo|number|no|42|Description of prop &quot;foo&quot;.
",
  "bar|custom|no|21|Description of prop &quot;bar&quot; (a custom validation function).
",
  "baz|union|no||
",
  "-----
",
  "**C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\basic\\\\inside\\\\OtherExampleComponent.js**
",
  "
",
  "### 1. Component1
",
  "
",
  "null   ",
  "",
  "
",
  "
",
  "
",
  "Property | Type | Required | Default value | Description
",
  ":--- | :--- | :--- | :--- | :---
",
  "foo|number|no|10000099999|Description of prop &quot;foo&quot;.
",
  "bar|custom|no||Description of prop &quot;bar&quot; (a custom validation function).
",
  "baz|union|no||
",
  "onExit|func|no|See code|
",
  "### 2. DUPA
",
  "
",
  "Blah blah blah...
   ",
  "fdfdfsdf
   ",
  "fdsfsd   ",
  "",
  "
",
  "
",
  "
",
  "Property | Type | Required | Default value | Description
",
  ":--- | :--- | :--- | :--- | :---
",
  "foo|number|no||Description of prop &quot;foo&quot;.
",
  "bar|custom|no||Description of prop &quot;bar&quot; (a custom validation function).
",
  "baz|union|no||
",
  "-----
",
  "
",
  "
",
  "",
]
`;

exports[`react-doc-generator contains help section if no argument is available in query 1`] = `
"[37m[39m

[37mREACT DOC GENERATOR v1.2.5[39m
[37mby Marcin Borkowski <marborkowski@gmail.com>[39m
[]
[31mPlease specify <dir> as the first argument![39m

  Usage: react-doc-generator <dir> [options]

  Options:

    -h, --help                        output usage information
    -V, --version                     output the version number
    -x, --extensions <items>          Include only these file extensions. Default: js,jsx
    -i, --ignore <items>              Folders to ignore. Default: node_modules,__tests__,__mocks__
    -e, --exclude-patterns <items>    Filename patterns to exclude. Default: []
    -t, --title [value]               Document title. Default: 'Components'
    -o, --output <file>               Markdown file to write. Default: 'DOCUMENTATION.MD'
    -d, --docusaurus-id <value>       Id for docusaurus file
    -s, --docusaurus-sidebar <value>  Sidebar label

"
`;

exports[`react-doc-generator has the proper console output 1`] = `
"[37m[39m

[37mREACT DOC GENERATOR v1.2.5[39m
[37mby Marcin Borkowski <marborkowski@gmail.com>[39m
C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\basic\\\\ExampleComponent.js filename
C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\basic\\\\inside\\\\OtherExampleComponent.js filename
C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\basic\\\\ExampleComponent.js,1,[32mOK.[39m,C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\basic\\\\inside\\\\OtherExampleComponent.js,2,[32mOK.[39m


┌──────────────────────────────────────────────────────────────────────────────────────────────────────┬────────────┬────────┐
│ [36mPath[39m                                                                                                 │ [36mComponents[39m │ [36mStatus[39m │
├──────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────┼────────┤
│ C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\basic\\\\ExampleComponent.js             │ 1          │ [32mOK.[39m    │
├──────────────────────────────────────────────────────────────────────────────────────────────────────┼────────────┼────────┤
│ C:\\\\Users\\\\rravindran\\\\metocean\\\\react-doc-generator\\\\src\\\\__mocks__\\\\basic\\\\inside\\\\OtherExampleComponent.js │ 2          │ [32mOK.[39m    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────┴────────────┴────────┘
"
`;

exports[`react-doc-generator return the proper message when given extensions not found 1`] = `
"[37m[39m

[37mREACT DOC GENERATOR v1.2.5[39m
[37mby Marcin Borkowski <marborkowski@gmail.com>[39m
[1m[33mWarning:[39m[22m [33mCould not find any files matching the file type: \`*.4hs0\` OR \`*.kku4\`[39m

┌──────┬────────────┬────────┐
│ [36mPath[39m │ [36mComponents[39m │ [36mStatus[39m │
└──────┴────────────┴────────┘
"
`;
